--- a/index.html
+++ b/index.html
@@ -265,9 +265,13 @@ _blank">Obtén tu clave aquí.</a></p>
                                     <option value="meme" selected>Meme</option>
                                     <option value="frase_opinion">Frase / Opinión</option>
                                     <option value="debate">Debate</option>
+                                    <option value="debatible">Frase Debatible</option>
                                     <option value="emocional">Frase Emocional</option>
+                                    <option value="mananera">Frase Mañanera</option>
                                     <option value="reflexion">Reflexión Nocturna</option>
                                     <option value="final">Frase Final</option>
+                                    <option value="cristiana">Frase Cristiana</option>
+                                    <option value="manipuladora">Frase Manipuladora / Sugestiva</option>
                                 </select>
                             </div>
                              <div class="form-group">
@@ -455,9 +459,13 @@ _blank">Obtén tu clave aquí.</a></p>
                                     <option value="meme" selected>Meme</option>
                                     <option value="frase_opinion">Frase / Opinión</option>
                                     <option value="debate">Debate</option>
+                                    <option value="debatible">Frase Debatible</option>
                                     <option value="emocional">Frase Emocional</option>
+                                    <option value="mananera">Frase Mañanera</option>
                                     <option value="reflexion">Reflexión Nocturna</option>
                                     <option value="final">Frase Final</option>
+                                    <option value="cristiana">Frase Cristiana</option>
+                                    <option value="manipuladora">Frase Manipuladora / Sugestiva</option>
                                 </select>
                             </div>
                              <div class="form-group">
