--- a/index.html
+++ b/index.html
@@ -254,9 +254,10 @@ _blank">Obtén tu clave aquí.</a></p>
                                 <select id="ai-trend-date-filter">
                                     <option value="any">Cualquier Fecha</option>
                                     <option value="hour">Última Hora</option>
-                                    <option value="today">Hoy (últimas 24h)</option>
-                                    <option value="yesterday">Ayer</option>
-                                    <option value="before_yesterday">Antier</option>
+                                    <option value="4hours">Últimas 4 Horas</option>
+                                    <option value="24hours">Últimas 24 Horas</option>
+                                    <option value="48hours">Últimas 48 Horas</option>
+                                    <option value="7days">Últimos 7 Días</option>
                                 </select>
                             </div>
                             <h3>Tipo de Contenido</h3>
@@ -448,9 +449,10 @@ _blank">Obtén tu clave aquí.</a></p>
                                 <select id="image-post-ai-trend-date-filter">
                                     <option value="any">Cualquier Fecha</option>
                                     <option value="hour">Última Hora</option>
-                                    <option value="today">Hoy (últimas 24h)</option>
-                                    <option value="yesterday">Ayer</option>
-                                    <option value="before_yesterday">Antier</option>
+                                    <option value="4hours">Últimas 4 Horas</option>
+                                    <option value="24hours">Últimas 24 Horas</option>
+                                    <option value="48hours">Últimas 48 Horas</option>
+                                    <option value="7days">Últimos 7 Días</option>
                                 </select>
                             </div>
                             <h3>Tipo de Contenido</h3>
@@ -600,12 +602,28 @@ _blank">Obtén tu clave aquí.</a></p>
                         </div>
                         <div class="fb-form-group">
                             <label>Fecha de la Noticia (Opcional)</label>
-                             <div class="fb-date-filters">
-                                <select id="fb-year-select"></select>
-                                <select id="fb-month-select"></select>
-                                <select id="fb-day-select"></select>
+                            <div id="fb-date-mode-selector" class="fb-segmented-control">
+                                <button data-mode="quick" class="active">Filtro Rápido</button>
+                                <button data-mode="specific">Fecha Específica</button>
                             </div>
-                            <p id="fb-date-error" class="fb-date-error hidden">La fecha no puede ser futura.</p>
+                            <div id="fb-quick-date-filters">
+                                <select id="fb-quick-date-select">
+                                     <option value="any">Cualquier Fecha</option>
+                                     <option value="hour">Última Hora</option>
+                                     <option value="4hours">Últimas 4 Horas</option>
+                                     <option value="24hours">Últimas 24 Horas</option>
+                                     <option value="48hours">Últimas 48 Horas</option>
+                                     <option value="7days">Últimos 7 Días</option>
+                                </select>
+                            </div>
+                            <div id="fb-specific-date-filters" class="hidden">
+                                <div class="fb-date-filters">
+                                    <select id="fb-year-select"></select>
+                                    <select id="fb-month-select"></select>
+                                    <select id="fb-day-select"></select>
+                                </div>
+                                <p id="fb-date-error" class="fb-date-error hidden">La fecha no puede ser futura.</p>
+                            </div>
                         </div>
                         <div class="fb-form-group">
                              <label for="fb-tone-select">Tono del Post</label>
@@ -765,6 +783,14 @@ _blank">Obtén tu clave aquí.</a></p>
                                 <button data-mode="web">Basada en Web</button>
                             </div>
                         </div>
+                        <div id="st-structure-group" class="st-form-group hidden">
+                            <label for="st-structure-selector">Estructura de la Confesión</label>
+                            <div id="st-structure-selector" class="st-segmented-control">
+                                <button data-structure="dilema_consejo" class="active">Dilema / Pide Consejo</button>
+                                <button data-structure="chisme_anecdota">Chisme / Anécdota</button>
+                                <button data-structure="desahogo">Desahogo Personal</button>
+                            </div>
+                        </div>
                         <div id="st-date-filter-group" class="st-form-group hidden">
                             <label for="st-date-filter">Periodo de Búsqueda (para Tendencias)</label>
                             <select id="st-date-filter">
@@ -841,6 +867,10 @@ _blank">Obtén tu clave aquí.</a></p>
                                     </button>
                                 </div>
                                 <p id="st-generated-text"></p>
+                            </div>
+                            <div class="st-sources-card hidden">
+                                <h3>Fuentes de Google</h3>
+                                <ul id="st-sources-list"></ul>
                             </div>
                         </div>
                          <div id="st-loader" class="hidden">
