--- a/index.html
+++ b/index.html
@@ -849,6 +849,14 @@ _blank">Obtén tu clave aquí.</a></p>
                                 <button data-length="larga">Larga</button>
                             </div>
                         </div>
+                        <div class="st-form-group">
+                            <label>Estilo de Imagen para Prompt</label>
+                            <div id="st-image-style-selector" class="st-segmented-control">
+                                <button data-style="realista" class="active">Realista</button>
+                                <button data-style="animado">Animado / Cómic</button>
+                                <button data-style="anime">Anime</button>
+                            </div>
+                        </div>
                         <button id="st-generate-btn">Generar Historia</button>
                     </div>
                     <div class="st-results-area">
@@ -867,6 +875,16 @@ _blank">Obtén tu clave aquí.</a></p>
                                     </button>
                                 </div>
                                 <p id="st-generated-text"></p>
+                            </div>
+                            <div id="st-image-prompt-card" class="st-card hidden">
+                                <div class="st-card-header">
+                                    <h3>Prompt para Imagen Sugerido</h3>
+                                    <button id="st-copy-prompt-btn">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
+                                        Copiar Prompt
+                                    </button>
+                                </div>
+                                <p id="st-generated-prompt"></p>
                             </div>
                             <div class="st-sources-card hidden">
                                 <h3>Fuentes de Google</h3>
